Admin, Controller, and Controls changes and fixes
Controller description layout fix, wp_enqueue_editor out of screen check taxonomy. RB_Input_Control: Added input options, common input renderer; date, datetime, and time inputs; Extra attributes for inputs; bugs fixed. Added control header to RB_tinymce_control. Inputs style changes.

--- a/controls/rb-tinymce/css/rb-tinymce-editor-control.css
+++ b/controls/rb-tinymce/css/rb-tinymce-editor-control.css
@@ -36,7 +36,7 @@
     left: 0;
     background-color: #d6dde8;
     display: none;
-    width: 100%;
+    /* width: 100%; */
     z-index: 1;
     position: relative;
     box-shadow: 0px 0px 3px black;
